5g消息测试页面改版

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,5 +76,6 @@ dependencies {
     implementation libs.immersionbar
     implementation libs.lottie
     implementation libs.autosize
+    implementation libs.recyclerview
     implementation(name: 'teesimmanager-debug', ext: 'aar')
 }
