--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,6 +18,7 @@ ext {
             retrofit      : '2.9.0',
             lottie        : '3.4.1',
             autosize      : '1.2.1',
+            recyclerview  : '1.1.0'
     ]
 
     build_plugins = [
@@ -42,5 +43,7 @@ ext {
             lottie                      : [group: 'com.airbnb.android', name: 'lottie', version: versions.lottie],
 
             autosize                    : [group: 'me.jessyan', name: 'autosize', version: versions.autosize],
+
+            recyclerview                : [group: 'androidx.recyclerview', name: 'recyclerview', version: versions.recyclerview],
     ]
 }
