--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".ui.test5g.RemindActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".ui.MainActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait">
