--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,5 +77,12 @@ dependencies {
     implementation libs.lottie
     implementation libs.autosize
     implementation libs.recyclerview
+    implementation libs.transferee
+    implementation 'com.github.Hitomis.transferee:GlideImageLoader:1.6.1'
+    implementation 'com.zhy:base-adapter:3.0.3'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'jp.wasabeef:glide-transformations:2.0.1'
     implementation(name: 'teesimmanager-debug', ext: 'aar')
+    implementation project(':pictureselector')
 }
