--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation 'com.zhy:base-adapter:3.0.3'
     implementation 'com.zhy:base-rvadapter:3.0.3'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'jp.wasabeef:glide-transformations:2.0.1'
     implementation(name: 'teesimmanager-debug', ext: 'aar')
     implementation project(':pictureselector')
