--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mobiletest">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -11,9 +12,11 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
     <uses-permission android:name="android.permission.NFC" />
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
-    <!-- 声明需要硬件支持nfc -->
+    <uses-permission
+        android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"
+        tools:ignore="ProtectedPermissions" /> <!-- 声明需要硬件支持nfc -->
     <uses-feature
         android:name="android.hardware.nfc.hce"
         android:required="true" />
@@ -54,7 +57,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.test5g.PayActivity"
             android:launchMode="singleTask"
@@ -76,35 +78,33 @@
             android:name=".ui.test5g.Test5GMsgActivity"
             android:launchMode="singleTask"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.test5g.PayResultActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.test5g.RemindActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.test5g.PayEntryActivity"
             android:screenOrientation="portrait" />
-
         <activity
             android:name=".ui.test5g.PayMsgDetailsActivity"
-            android:screenOrientation="portrait" />
-
-        <!-- Service for handling communication with NFC terminal. -->
+            android:screenOrientation="portrait" /> <!-- Service for handling communication with NFC terminal. -->
         <service
             android:name=".ui.test5g.CardService"
             android:exported="true"
             android:permission="android.permission.BIND_NFC_SERVICE">
+
             <!-- Intent filter indicating that we support card emulation. -->
             <intent-filter>
                 <action android:name="android.nfc.cardemulation.action.HOST_APDU_SERVICE" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
-            <!-- Required XML configuration file, listing the AIDs that we are emulating cards
-                 for. This defines what protocols our card emulation service supports. -->
+            <!--
+                 Required XML configuration file, listing the AIDs that we are emulating cards
+                 for. This defines what protocols our card emulation service supports.
+            -->
             <meta-data
                 android:name="android.nfc.cardemulation.host_apdu_service"
                 android:resource="@xml/aid_list" />
